Lab-14/End/GiftShop/Istio-Manifests/mTLS/ByService/DestinationRule-GiftShopAPI.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "all-giftshop-mtls"
  namespace: microservices
spec:
  host: giftshopapi.microservices.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
